--- a/src/pages/auth/login/login.scss
+++ b/src/pages/auth/login/login.scss
@@ -6,6 +6,15 @@ page-login {
         background-size: cover;
     }
 
+    .slide-zoom{
+      height: 100%;
+      background: rgba(32, 32,32,0.2);
+    }
+
+    ion-slides{
+      height: 100vh;
+    }
+
     .scroll-content{
         margin-top: 0 !important;
         display: flex;
@@ -26,9 +35,55 @@ page-login {
 
   .login-button{
     text-transform: uppercase;
-    border-radius: 10px !important;
+    border-radius: 5px !important;
     &.activated{
       background-color: rgba(255, 255, 255, .4) !important;
     }
+  }
+
+  ion-item{
+    border-radius: 3px !important;
+    padding-left: 10px !important;
+    margin-bottom: 15px !important;
+    color: #ffffff !important;
+    background-color: rgba(255, 255, 255, .4) !important;
+    font-size: 0.9em;
+  }
+
+  ::-webkit-input-placeholder {
+    color: #ffffff !important;
+  }
+
+  .strike{
+    display: block;
+    text-align: center;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  .strike>span {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+  }
+
+  .strike>span:before,
+  .strike>span:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    width: 9999px;
+    height: 1px;
+    background: #fff;
+  }
+
+  .strike>span:before {
+    right: 100%;
+    margin-right: 15px;
+  }
+
+  .strike>span:after{
+    left: 100%;
+    margin-left: 15px;
   }
 }
