--- a/src/pages/auth/signup/signup.scss
+++ b/src/pages/auth/signup/signup.scss
@@ -1,3 +1,24 @@
 page-signup {
+  .slide-background{
+    border-color: transparent;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
 
+  .slide-zoom{
+    height: 100%;
+    background: rgba(32, 32,32,0.2);
+  }
+
+  ion-slides{
+    height: 100vh;
+  }
+
+  .scroll-content{
+    margin-top: 0 !important;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+  }
 }
